Fix text overflow

--- a/style.css
+++ b/style.css
@@ -10,14 +10,21 @@
 
 #display {
     border: black solid;
-    height: 100px;
+    height: auto;
+    min-height: 50px;
     width: 90%;
-    margin: 10px;
-    font-size: 50px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    padding: 0 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+
+    word-wrap: break-word;
+    word-break: break-all;
+    text-align: right;
+}
+
+#currScreen {
+    min-height: 64px;
+    font-size: 40px;
+    display: block;
 }
 
 #buttons {
